--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=
-PORT=
-SECRET_KEY=
+DATABASE_URL="mongodb+srv://glacirilo:19900105@cluster0.zad3cf6.mongodb.net/metaVaga"
+PORT=3333
+SECRET_KEY=ter
